自己記録（PR）管理機能追加
